# scribe-md

./: .gitignore  CHANGELOG.md  PLAN.md  README.md  pixi.toml  pyproject.toml  transcribe.py  transcribe.sh
capture/: Package.swift
capture/Sources/: main.swift
docs/: LINUX.md
docs/superpowers/plans/: 2026-05-22-linux-support.md  2026-06-24-multi-gpu-parallel.md
docs/superpowers/specs/: 2026-05-22-linux-support-design.md  2026-06-24-multi-gpu-parallel-design.md
scribe_md/: __init__.py  audio.py  capture.py  cli.py  config.py  diarize.py  downloader.py  gpu.py  merger.py  obsidian.py  platform_support.py  postprocess.py  scheduler.py  transcriber.py  utils.py
scribe_md/backends/: __init__.py  base.py  mlx.py  whispercpp.py
tests/: test_audio_hint.py  test_backends.py  test_capture.py  test_cli_batch.py  test_cli_degradation.py  test_cli_inputs.py  test_cli_resolve.py  test_config.py  test_diarize.py  test_downloader.py  test_gpu.py  test_merger.py  test_obsidian.py  test_platform_support.py  test_postprocess.py  test_scheduler.py  test_whispercpp.py
