[project]
name = "scribe-md"
version = "0.2.0"
description = "Transcribe system audio and YouTube videos to Markdown"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.9",
    "yt-dlp",
    "rich",
    "mlx-whisper; sys_platform == 'darwin'",
]

[project.optional-dependencies]
diarize = ["pyannote-audio>=4.0"]

[project.scripts]
scribe-md = "scribe_md.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
